--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,18 @@
             <artifactId>log4j-api</artifactId>
             <version>2.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.8.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>3.10.0</version>
+        </dependency>
+
+
 
     </dependencies>
 </project>
